--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "reselect": "^4.1.7",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
